# tool_neural-docstrings-generator

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
ndg/: main.py
neural_docstrings/: main.py
