[tool.poetry]
name = "neural-docstrings"
version = "0.1.0"
description = ""
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.1.16"
pandas = "^2.2.2"
progress = "^1.6"
click = "^8.1.7"
pyfs = {git = "https://github.com/NicholasSynovic/python-fs-utils"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ndg = "neural_docstrings.main:main"
